--- a/assets/scss/templates/_guidelines.scss
+++ b/assets/scss/templates/_guidelines.scss
@@ -1648,6 +1648,7 @@ body {
 .wrapper-tooltip {
   flex-wrap: wrap;
   display: flex;
+  width: 100%;
   justify-content: space-evenly;
   padding: 50px 10px;
 
